[package]
name = "shape-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = ["dynamic_linking"] }
bevy_rapier2d = "0.23.0"
log = "0.4.20"
rand = "0.8.5"
rand_pcg = "0.3.1"

[features]
rapier-debug-render = ["bevy_rapier2d/debug-render-2d"]

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
